syntax = "proto3";

package mirero.daq.domain.workflow.protos.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "daq_common.proto";
import "daq_workflow_server_api_v1.proto";

option csharp_namespace = "Mirero.DAQ.Domain.Workflow.Protos.V1";

service WorkerService {
	rpc ListWorkers(ListWorkersRequest) returns (ListWorkersResponse) {}
	rpc CreateWorker(CreateWorkerRequest) returns (Worker) {}
	rpc StartWorker(StartWorkerRequest) returns (google.protobuf.Empty) {}
	rpc StopWorker(StopWorkerRequest) returns (google.protobuf.Empty) {}
	rpc DeleteWorker(DeleteWorkerRequest) returns (google.protobuf.Empty) {}
}

message Worker {
	string id = 1;
	string server_id = 2;
	int32 cpu_count = 3;
	int64 cpu_memory = 4;
	int32 gpu_count = 5;
	int64 gpu_memory = 6; 
	google.protobuf.StringValue properties = 7;
	google.protobuf.StringValue description = 8;
	string workflow_type = 9;
	string job_type = 10;
	Server server = 11;
}

message CreateWorkerRequest {
	string id = 1;
	string server_id = 2;
	int32 cpu_count = 3;
	int64 cpu_memory = 4;
	int32 gpu_count = 5;
	int64 gpu_memory = 6; 
	google.protobuf.StringValue properties = 7;
	google.protobuf.StringValue description = 8;
	string workflow_type = 9;
	string job_type = 10;
}

message ListWorkersRequest {
	mirero.daq.domain.common.protos.QueryParameter query_parameter = 1;
}

message ListWorkersResponse {
	mirero.daq.domain.common.protos.PageResult page_result = 1;
	repeated Worker workers = 2;
}

message StartWorkerRequest {
	string worker_id = 1;
}

message StopWorkerRequest {
	string worker_id = 1;
}

message DeleteWorkerRequest {
	string worker_id = 1;
}